Fix T73568: Vertex selection fails in weight-paint mode

Lasso, circle, box select fails in weight paint mode with modifiers.